# src/main/java/aiss/model/Phone.java
@@ -1,29 +1,31 @@
 package aiss.model;
 
+import java.time.LocalDate;
+
 public class Phone {
 
 	private String id;
 	private String name;
-	private String price;
-	private String releaseDate;
+	private Double price;
+	private LocalDate releaseDate;
 	private String size;
 	private String resolution;
 
 	public Phone() {
 	}
 
-	public Phone(String name, String brand, String releaseDate, String size, String resolution) {
+	public Phone(String name, Double price, LocalDate releaseDate, String size, String resolution) {
 		this.name = name;
-		this.price = brand;
+		this.price = price;
 		this.releaseDate = releaseDate;
 		this.size = size;
 		this.resolution = resolution;
 	}
 	
-	public Phone(String id, String name, String brand, String releaseDate, String size, String resolution) {
+	public Phone(String id, String name, Double price, LocalDate releaseDate, String size, String resolution) {
 		this.id=id;
 		this.name = name;
-		this.price = brand;
+		this.price = price;
 		this.releaseDate = releaseDate;
 		this.size = size;
 		this.resolution = resolution;
@@ -45,19 +47,19 @@ public class Phone {
 		this.name = name;
 	}
 
-	public String getPrice() {
+	public Double getPrice() {
 		return price;
 	}
 
-	public void setPrice(String price) {
+	public void setPrice(Double price) {
 		this.price = price;
 	}
 
-	public String getReleaseDate() {
+	public LocalDate getReleaseDate() {
 		return releaseDate;
 	}
 
-	public void setReleaseDate(String releaseDate) {
+	public void setReleaseDate(LocalDate releaseDate) {
 		this.releaseDate = releaseDate;
 	}
 
